--- a/Main Exercises/Exercise_10/index.html
+++ b/Main Exercises/Exercise_10/index.html
@@ -14,6 +14,7 @@
       type="text/javascript"
     ></script>
 
+    <script src="Point.js" type="text/javascript"></script>
     <script src="sketch.js" type="text/javascript"></script>
 
     <!-- help tooltip start -->
