--- a/Main Exercises/Exercise_11_fonts/index.html
+++ b/Main Exercises/Exercise_11_fonts/index.html
@@ -14,7 +14,6 @@
       type="text/javascript"
     ></script>
 
-    <script src="Point.js" type="text/javascript"></script>
     <script src="sketch.js" type="text/javascript"></script>
 
     <!-- help tooltip start -->
@@ -40,6 +39,11 @@
       src="../../libraries/help-tooltip.js"
       type="text/javascript"
     ></script>
+    <script
+      src="../../libraries/opentype.js/opentype.js"
+      type="text/javascript"
+    ></script>
+    <script src="../../libraries/g.js/g.js" type="text/javascript"></script>
     <!-- help tooltip end -->
   </head>
   <style>
